# tangerine

./: .gitignore  build.sh  logo.icns  main.spec  out.txt  pyproject.toml
model/: segment_params.json
src/: colors.py  gui.py  main.py  segmentation.py  shapes.py  utils.py  waitingspinnerwidget.py
